[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemy_space_ship/Sprite-1_Idle.png" type="Texture" id=1]
[ext_resource path="res://enemy_space_ship/enemy_space_ship.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="CircleShape2D" id=5]
radius = 593.57

[node name="enemy_space_ship" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="enemy_space_ship_area" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="enemy_space_ship_area"]
polygon = PoolVector2Array( -8, -8, -8, 0, -3, 6, 3, 6, 8, 0, 8, -7, 8, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="enemy_health_bar" type="ProgressBar" parent="."]
margin_left = -16.0
margin_top = -19.0
margin_right = 16.0
margin_bottom = -5.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false

[node name="enemy_scope" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_scope"]
shape = SubResource( 5 )

[connection signal="area_entered" from="enemy_space_ship_area" to="." method="_on_enemy_space_ship_area_area_entered"]
[connection signal="body_entered" from="enemy_scope" to="." method="_on_enemy_scope_body_entered"]
[connection signal="body_exited" from="enemy_scope" to="." method="_on_enemy_scope_body_exited"]
